# miso-isomorphic-stack

./: .gitignore  LICENSE  Miso-Project.code-workspace  README.md  brittany.yaml  hie.sh  package-lib.yaml  rebuild.sh  stack-build-docker.sh  stack-build.sh
backend/: .hspec-failures  backend.cabal  package.yaml  stack.yaml
backend/src/: App.hs  Main.hs
backend/src/Backend/: App.hs
backend/test/: Main.hs  Spec.hs
backend/test/Backend/: AppSpec.hs
common/: common.cabal  package.yaml  stack.yaml
common/src/Common/: Common.hs  Model.hs  Routes.hs  View.hs
common/test/: Main.hs
common/test/Common/: ModelSpec.hs
frontend/: brittany.yaml  frontend.cabal  package.yaml  stack.yaml
frontend/src/: Main.hs
frontend/src/Frontend/: Update.hs
frontend/test/: Spec.hs
frontend/test/Frontend/: UpdateSpec.hs
project/: Dockerfile  hie.sh  package-lib.yaml  runner.sh  stack-build-docker.sh  stack-build.sh
