name:                backend
version:             0.1.0.1
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24

library
  exposed-modules:     App
  build-depends:       base
                     , common
                     , miso
                     , text
                     , servant
                     , servant-server
                     , servant-lucid
                     , warp
                     , wai
                     , wai-extra
                     , wai-logger
                     , wai-cors
                     , aeson
                     , lens
                     , containers
                     , http-types
                     , lucid
                     , mtl
  hs-source-dirs:      src
  default-extensions:  GADTs
                       LambdaCase
                       OverloadedStrings
                       RecursiveDo
                       ScopedTypeVariables
                       DataKinds
                       TypeOperators
                       TypeApplications
  default-language:    Haskell2010
  ghc-options: -threaded -dynamic


executable backend
  main-is:             Main.hs
  build-depends:       base
                     , backend
                     , warp
                     , wai
                     , wai-extra
                     , wai-logger
                     , wai-cors
  hs-source-dirs:      bin
  default-extensions:  GADTs
                       LambdaCase
                       OverloadedStrings
                       RecursiveDo
                       ScopedTypeVariables
                       DataKinds
                       TypeOperators
                       TypeApplications
  default-language:    Haskell2010
  ghc-options: -threaded -dynamic

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backend
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
