name:                common
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24


library
  hs-source-dirs:      src
  exposed-modules:     Common.Routes
                       Common.Model
                       Common.View
  build-depends:       base
                     , miso
                     , aeson
                     , lens
                     , containers
                     , network-uri
                     , servant
  default-extensions:  GADTs
                       LambdaCase
                       OverloadedStrings
                       RecursiveDo
                       ScopedTypeVariables
                       DataKinds
                       TypeOperators
                       TypeApplications
                       TemplateHaskell
  default-language:    Haskell2010
