name:                frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Kjaer Laustsen
maintainer:          ckl@codetalk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24

executable frontend
  main-is:             Main.hs
  -- if !impl(ghcjs)
  --   buildable: False
  -- other-modules:
  hs-source-dirs:      src
  build-depends:       base
                     , common
                     , miso
                     , aeson
                     , lens
                     , containers
                     , network-uri
                     , servant
  default-extensions:  GADTs
                       LambdaCase
                       OverloadedStrings
                       RecursiveDo
                       ScopedTypeVariables
                       DataKinds
                       TypeOperators
  default-language:    Haskell2010
  ghc-options: -O2 -threaded -Wall
